# agentgw

./: .gitignore  README.md  pyproject.toml
docs/specs/: 2026-04-09-agentgw-channel-centric-spec.md  2026-04-09-agentgw-implementation.md
docs/superpowers/plans/: 2026-04-02-agentgw-channel-gateway.md
docs/superpowers/specs/: 2026-04-02-agentgw-channel-gateway-design.md  2026-04-09-agent-session-integration.md
scripts/: mock_agent_server.py
src/agentgw/: __init__.py
src/agentgw/adapters/: __init__.py
src/agentgw/adapters/agent/: __init__.py  sdk_session.py  ws_rpc.py
src/agentgw/adapters/egress/: __init__.py  dispatcher.py  welink.py
src/agentgw/adapters/ingress/: __init__.py
src/agentgw/application/dto/: __init__.py  messages.py
src/agentgw/bootstrap/: __init__.py  container.py  gateway_app.py
src/agentgw/dev/: __init__.py  mock_relay_sdk.py
src/agentgw/domain/: __init__.py
src/agentgw/infrastructure/: __init__.py
src/agentgw/interfaces/: __init__.py
tests/: conftest.py  helpers.py
tests/integration/: test_admin_sync_api.py  test_channel_flows.py  test_health_api.py  test_http_api.py  test_mock_agent_server.py
tests/unit/: test_mock_relay_sdk.py  test_welink_egress.py
tests/unit/application/: test_process_delivery.py  test_sync_contacts.py  test_sync_messages.py
tests/unit/domain/: test_delivery.py
tests/unit/infrastructure/: conftest.py  test_channel_clients.py  test_delivery_repository.py  test_dispatcher.py  test_message_repository.py  test_models.py  test_scheduler.py  test_sync_repository.py
(+80 files in other folders)
